k8s/flight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-service
  namespace: mini-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight
  template:
    metadata:
      labels:
        app: flight
    spec:
      containers:
        - name: flight
          image: flight-service:local
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service
  namespace: mini-booking
spec:
  selector:
    app: flight
  ports:
    - port: 5001
      targetPort: 5001
