k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: mini-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: user-service:local
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: mini-booking
spec:
  selector:
    app: user
  ports:
    - port: 5002
      targetPort: 5002
