k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-booking-ingress
  namespace: mini-booking
spec:
  ingressClassName: nginx
  rules:
    - host: mini-booking.local
      http:
        paths:
          - path: /api/flights
            pathType: Prefix
            backend:
              service:
                name: flight-service
                port:
                  number: 5001
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
